# tutto_antony_2026_janvier

./: README.md  main.py  pyproject.toml
.github/workflows/: docs.yaml
public/: .buildinfo  .buildinfo.bak  commands.html  deployment.html  genindex.html  index.html  objects.inv  quickstart.html  search.html  searchindex.js
public/.doctrees/: commands.doctree  deployment.doctree  environment.pickle  index.doctree  quickstart.doctree
public/_sources/: commands.rst.txt  deployment.rst.txt  index.rst.txt  quickstart.rst.txt
source/: commands.rst  conf.py  index.rst
test/: test_valid.py
